--- a/index.css
+++ b/index.css
@@ -6,6 +6,17 @@
     margin: 20px;
 }
 
+.navbar {
+    background-color: #11202f;
+}
+
+.navbar-brand {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: white !important;
+    padding-left: 20px;
+}
+
 .image1,.image2,.image3 {
     width: 40px;
 }
